@@ -91,8 +91,7 @@
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <argLine>-javaagent:${project.build.directory}/grinder-dcr-agent.jar
-            -XX:MaxPermSize=256m -Djava.awt.headless=true</argLine>
+          <argLine>-javaagent:${project.build.directory}/grinder-dcr-agent.jar</argLine>
         </configuration>
       </plugin>
 
